[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/tileset.png" type="Texture" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=3]
[ext_resource path="res://assets/Cave-Story.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui.png" type="Texture" id=5]
[ext_resource path="res://assets/pickup.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 16, 356, 928, 168 )

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 44, 140, 8, 8 )

[sub_resource type="DynamicFont" id=9]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=10]
resource_name = "FadeInStats"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("StatsBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.001 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StatsBackground/CenterContainer/Stats:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StatsBackground/CenterContainer/Stats:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Icons" type="Control" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 44.0
margin_bottom = 44.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Icons"]
margin_right = 104.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hearts" type="HBoxContainer" parent="Icons/VBoxContainer"]
margin_right = 104.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" type="TextureButton" parent="Icons/VBoxContainer/Hearts"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = SubResource( 1 )
texture_disabled = SubResource( 2 )

[node name="Heart2" type="TextureButton" parent="Icons/VBoxContainer/Hearts"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture_normal = SubResource( 1 )
texture_disabled = SubResource( 2 )

[node name="Heart3" type="TextureButton" parent="Icons/VBoxContainer/Hearts"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture_normal = SubResource( 1 )
texture_disabled = SubResource( 2 )

[node name="Inventory" type="HBoxContainer" parent="Icons/VBoxContainer"]
margin_top = 36.0
margin_right = 104.0
margin_bottom = 36.0

[node name="Key" type="TextureButton" parent="Icons/VBoxContainer/Inventory"]
visible = false
margin_right = 32.0
margin_bottom = 32.0
texture_normal = SubResource( 3 )

[node name="Hat" type="TextureButton" parent="Icons/VBoxContainer/Inventory"]
visible = false
margin_right = 32.0
margin_bottom = 32.0
texture_normal = SubResource( 4 )

[node name="Teddy" type="TextureButton" parent="Icons/VBoxContainer/Inventory"]
visible = false
margin_right = 32.0
margin_bottom = 32.0
texture_normal = SubResource( 5 )

[node name="TextBackground" type="TextureRect" parent="."]
visible = false
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 89.0
rect_scale = Vector2( 0.25, 0.25 )
texture = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextInterfaceEngine" type="ReferenceRect" parent="."]
margin_left = 10.0
margin_top = 95.0
margin_right = 230.0
margin_bottom = 125.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
FONT = SubResource( 7 )
PRINT_INPUT = false

[node name="OnPickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="StatsBackground" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 240.0
margin_bottom = 135.0
texture = SubResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="StatsBackground"]
margin_right = 240.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="RichTextLabel" parent="StatsBackground/CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 63.0
margin_top = 44.0
margin_right = 175.0
margin_bottom = 90.0
rect_min_size = Vector2( 112, 46 )
custom_fonts/normal_font = SubResource( 9 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
visible_characters = 0
percent_visible = 0.0
text = "Thank you for playing!
You died {x} times over {y} iterations."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeInStats = SubResource( 10 )
[connection signal="buff_cleared" from="TextInterfaceEngine" to="." method="_on_TextInterfaceEngine_buff_cleared"]
[connection signal="state_change" from="TextInterfaceEngine" to="." method="_on_TextInterfaceEngine_state_change"]
